--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -30,13 +30,13 @@ feature-cta: Descubre más
 features:
 
   - id: self-charge
-    title: Sin enchufes. Sin diésel. Sin preocupaciones
-    description: El modelo Lexus&nbsp;UX se carga de forma automática mientras conduces. No tiene enchufes, lo cual significa que tu escapada no tendrá interrupciones. Los viajes estarán impulsados por una cuarta generación de Híbrido Autorrecargable Lexus con transmisión automática que cuenta con un motor de gasolina de 4 cilindros y 2 litros, un potente motor eléctrico y una transmisión híbrida de nuevo desarrollo.
+    title: Sin cables. Sin diésel. Sin preocupaciones
+    description: El modelo Lexus&nbsp;UX se carga de forma automática mientras conduces. No tiene cables, lo cual significa que tu escapada no tendrá interrupciones. Los viajes están impulsados por un motor híbrido de cuarta generación. Combinación de un motor gasolina de 4 cilindros y 2 litros, así como un potente motor eléctrico.
     link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: performance
-    title: Rendimiento estimulante
-    description: "Una posición de asiento dominante con excelente visibilidad, junto con un centro de gravedad bajo y una plataforma rígida, brindan una experiencia de conducción que simplemente no se esperaría de un crossover moderno: ágil, potente y sensible. El nuevo Lexus&nbsp;UX yuxtapone el rendimiento de la tracción en las cuatro ruedas E-FOUR con una eficiencia de próxima generación, logrando hasta 68.9 mpg, ideal para ahorrar combustible durante una escapada de fin de semana."
+    title: Prestaciones sorprendentes
+    description: "Una posición de conducción con excelente visibilidad, junto con un centro de gravedad bajo y una plataforma rígida, brindan una experiencia de conducción que simplemente no se esperaría de un crossover moderno: ágil, potente y sensible. El nuevo Lexus une la tracción a las 4 ruedas E-FOUR con un consumo muy bajo, ideal para una escapada de fin de semana."
     link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: design
@@ -46,17 +46,17 @@ features:
 
   - id: city
     title: Perfecto para la ciudad
-    description: Lexus&nbsp;UX cuenta con el campo de visión más amplio de su clase, inspirado en el principio arquitectónico japonés de ‘Engawa’, donde el interior y el exterior se conectan a la perfección, facilitando una convivencia más armoniosa con el medio ambiente. Este inteligente diseño te permite detectar el tamaño del vehículo, por lo que será sencillo maniobrar en la ciudad.
+    description: Lexus&nbsp;UX cuenta con el campo de visión más amplio de su categoría, inspirado en el principio arquitectónico japonés de ‘Engawa’, donde el interior y el exterior se conectan a la perfección, facilitando una convivencia más armoniosa con el medio ambiente. Este inteligente diseño te permite detectar el tamaño del vehículo, por lo que será sencillo maniobrar en la ciudad.
     link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: technology
     title: Tecnología imaginativa
-    description: Disfruta de vistas panorámicas de 360° del coche y de los alrededores a través de cuatro cámaras de vídeo con el Monitor de Vista Panorámica. No hay necesidad de navegar con cables. Y es que su cargador inalámbrico con tecnología Qi incorporada, te permite cargar smartphones de manera sencilla, tan solo colocándolos en el cargador. Esto te garantizará estar al máximo de batería, ¡y listo para explorar en todo momento!
+    description: Disfruta de vistas panorámicas de 360° del coche y de los alrededores a través de cuatro cámaras de vídeo con el Monitor de Vista Panorámica. No hay necesidad de utilizar cables. Y es que su cargador inalámbrico con tecnología Qi incorporada, te permite cargar smartphones de manera sencilla, tan solo colocándolos en el cargador. Esto te garantizará estar al máximo de batería, ¡y listo para explorar en todo momento!
     link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: saftey
-    title: Progreso con seguridad
-    description: Un avanzado sistema de seguridad Lexus + de segunda generación te mantiene a ti y a tus pasajeros a salvo, con características que incluyen el Control de Crucero por Radar Dinámico con asistencia de señales de carretera, Sistema de Pre-colisión y Asistencia de Rastreo de Carril. Al complementar y reforzar tus habilidades de conducción, Lexus Safety System + mejora tus sentidos para garantizar que siempre te sientas seguro durante el viaje.
+    title: Máxima seguridad
+    description: Un avanzado sistema de seguridad Lexus + de segunda generación te mantiene a ti y a tus pasajeros a salvo, con características que incluyen el Control de Crucero por Radar Dinámico con asistencia de señales de carretera, Sistema de Pre-colisión y Asistente de Cambio Involuntario de Carril. Al complementar y reforzar tus habilidades de conducción, Lexus Safety System + mejora tus sentidos para garantizar que siempre te sientas seguro durante el viaje.
     link: https://www.lexusauto.es/car-models/ux/#hero
 
   - id: config
