--- a/_pages/cityguider/goteborg/index.html
+++ b/_pages/cityguider/goteborg/index.html
@@ -39,7 +39,7 @@ features:
     place: Röda Stens Konsthall
     title: Street art, samtidskonst och lunch på en av Göteborgs mest ikoniska platser
     description: >
-      Konsthallen på Röda Sten har haft lagliga väggar sedan Ebbot var smal vilket har gjort att hela området under bron blivit till ett slags dynamiskt utomhusgalleri. Här blandas högt och lågt, provokativt och dekorativt huller om buller för att nästa vecka bytas ut mot någonting annat. Utöver street art har de också utställningar med samtidskonst och en utmärkt restaurang som serverar lunch med smaker från världens alla hörn. Vid vackert väder kan man sitta på uteserveringen och titta på kranar och fartyg som passerar förbi.
+      Konsthallen Röda Sten har haft lagliga väggar sedan början av millennieskiftet vilket har gjort att området under bron blivit till ett slags dynamiskt utomhusgalleri. Här blandas högt och lågt, provokativt och dekorativt huller om buller för att nästa vecka bytas ut mot någonting annat. Utöver street art har de också utställningar med samtidskonst och en utmärkt restaurang som serverar lunch med smaker från världens alla hörn. Vid vackert väder kan man sitta på uteserveringen och titta på kranar och fartyg som passerar förbi.
 
   - id: rohsska-museet
     time: "16:33"
