--- a/_pages/cityguider/stockholm/index.html
+++ b/_pages/cityguider/stockholm/index.html
@@ -16,7 +16,7 @@ features:
   - id: kaffeverket
     time: "09:15"
     place: Kaffeverket
-    title: Nijut av en frukost i en elegant industriell atmosfär
+    title: Njut av en frukost i en elegant industriell atmosfär
     description: >
       Frukosten har gått från att ha varit något stockholmarna intagit hemma vid köksbordet till något man äter ute på stan. Utbudet av trendiga och nischade frukostställen växer hela tiden men det finns vissa som håller fanan högt år efter år. På Kaffeverket har de gott hantverkskaffe som sin raison d’être men kan även locka med god gröt och ljuvliga avokadomackor. Den industriella lokalen med vitt kakel och nakna glödlampor i taket är en utmärkt plats att spana på folk och insupa den urbana atmosfären på.
 
@@ -39,14 +39,14 @@ features:
     place: Fotografiskas Restaurang
     title: Hållbar och fotogenisk mat med vackra vyer som lunchsällskap
     description: >
-      När du känner dig färdig med museet är det dags nästa, men den här gången för att äta lunch. Ta färjan från Skeppsholmen till Slussen och promenera längs vattnet till tegelbyggnaden där Fotografiska håller till. Här inne hittar du, förutom fotokonst i världsklass även en av Stockholms trendigaste restauranger. På menyn, som tagits fram av stjärnkocken Paul Svensson, står säsongsbaserade rätter med fokus på vegetariskt och hållbarhet.
+      När du känner dig färdig med museet är det dags för nästa stopp, men den här gången för att äta lunch. Ta färjan från Skeppsholmen till Slussen och promenera längs vattnet till tegelbyggnaden där Fotografiska håller till. Här inne hittar du, förutom fotokonst i världsklass även en av Stockholms trendigaste restauranger. På menyn, som tagits fram av stjärnkocken Paul Svensson, står säsongsbaserade rätter med fokus på vegetariskt och hållbarhet.
 
   - id: secondhand-pa-hornsgatan
     time: "14:31"
     place: Secondhand på Södermalm
     title: Botanisera bland udda, unika och återupptäckta ting på hippa Hornsgatan
     description: >
-      När du känner dig färdig med museet är det dags för nästa, men den här gången för att äta lunch. Ta färjan från Skeppsholmen till Slussen och promenera längs vattnet till tegelbyggnaden där Fotografiska håller till. Här inne hittar du, förutom fotokonst i världsklass även en av Stockholms trendigaste restauranger. På menyn, som tagits fram av stjärnkocken Paul Svensson, står säsongsbaserade rätter med fokus på vegetariskt och hållbarhet.
+      Nu när du befinner dig på Södermalm, framröstad till en av de trendigaste stadsdelarna i Europa av ett flertal internationella sajter, är en runda i öns många vintage- och secondhandbutiker ett måste. En bra utgångspunkt för jakten på unika och udda ting är området runt Mariatorget och Hornsgatan där det ligger både enklare secondhandaffärer som Stadsmissionen och Myrorna och tjusiga vintagebutiker med noga utvalda objekt. Till exempel kan du slinka in på Herr Judit Brandstationen där du hittar spännande inredning och inspiration till hemmet.
 
   - id: cafe-pascal
     time: "16:20"
