--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -6,7 +6,7 @@ nav-title: Lexus UX
 nav-order: 6
 
 title: Lexus&nbsp;UX
-intro: Åk iväg på nästa stadsäventyr i nya Lexus&nbsp;UX, en självladdande elhybrid som kombinerar innovativ design med fint hantverk. Kör från stad till stad och upptäck en värld av design i en bil skapad för cityvistelser.
+intro: Låt nya Lexus&nbsp;UX ta med dig på nästa storstadsäventyr. En självladdande elhybrid som kombinerar innovativ teknik med ett genuint japanskt hantverk. Kör från stad till stad och upptäck en värld av design bakom ratten i en bil som är perfekt anpassad för urbana storstadsmiljöer.
 
 intro-links:
 
@@ -30,38 +30,38 @@ feature-cta: Läs mer
 features:
 
   - id: self-charge
-    title: Inga uttag. Ingen diesel. Ingen kompromiss.
-    description: Lexus&nbsp;UX laddar sig själv medan du kör, så du behöver inte koppla in den någonstans, vilket innebär att du slipper uppehåll under din weekend. Du kör med fjärde generationens självladdande hybrid av Lexus, med automatisk växellåda som har en 2.0-liters, fyrcylindrig bensinmotor, kraftfull elmotor och nyutvecklad hybridväxel.
+    title: Lexus självladdande elhybridteknik
+    description: Till skillnad från elbilar eller plug-in hybrider behöver du aldrig ansluta en självladdande elhybrid från Lexus till ett eluttag. De är alltid laddade och redo för nästa resa. Lexus&nbsp;UX 250h är inget undantag och tack vare elhybridtekniken kopplar den sömlöst samman bensinmotorn med elkraft vilket ger dig direkt acceleration, fördelaktig bränsleförbrukning och ett lågt CO2-utsläpp.
     link: https://www.lexus.se/car-models/ux/#hero
 
   - id: performance
     title: Kraftfull prestanda
-    description: En sittposition med utmärkt synfält i kombination med en låg tyngdpunkt och fast plattform ger en körupplevelse som du helt enkelt inte skulle förvänta dig av en modern crossover – smidig, kraftfull och lyhörd. Nya Lexus&nbsp;UX kombinerar E-FOUR All-Wheel Drive-prestanda med nästa generations effektivitet, når upp till 0,41 liter per mil, perfekt för att spara på bränsle under en weekendresa.
+    description: Lexus&nbsp;UX erbjuder en sittposition med utmärkt synfält i kombination med en låg tyngdpunkt som ger en bekväm körupplevelse. Den är smidig, kraftfull och lyhörd. UX finns tillgänglig med fyrhjulsdrift och är bränsleeffektiv, med 0,41 liter per mil är den perfekt för en weekendresa
     link: https://www.lexus.se/car-models/ux/#hero
 
   - id: design
-    title: Intelligent design
-    description: Lexus&nbsp;UX är dramatisk och full av personlighet. Med karaktäristiska galler, sportig silhuett och djärv bakre design drar du blickarna till dig i staden. UX blir en elegant och sofistikerad del av ditt äventyr – en helt ny crossover-serie byggd för moderna och urbana vistelser.
+    title: Innovativ aerodynamisk design
+    description: Frontens djärva utseende accentueras av den distinkta spindelgrillen, de trippla LEDstrålkastarna och de nya pilspetsformade varselljusen. Unika innovativa designlösningar i kombination med utmärkt aerodynamik tack vare ett slätt underrede som bidrar till en bra bränsleekonomi samtidigt som vindbrus och turbulens reduceras väsentligt.
     link: https://www.lexus.se/car-models/ux/#hero
 
   - id: city
-    title: Perfekt för städer
-    description: Lexus&nbsp;UX stoltserar med det vidaste synfältet i sin klass, inspirerat av den japanska arkitektoniska principen "Engawa", där interiören och exteriören är sömlöst ihopkopplade, vilket möjliggör en mer harmonisk samexistens med miljön. Denna snygga design gör att du kan känna av fordonets storlek, vilket gör det lätt att köra i städer.
+    title: Optimerad för stadsmiljö
+    description: Lexus&nbsp;UX stoltserar med det vidaste synfältet i sin klass, inspirerat av den japanska arkitektoniska principen "Engawa", där interiören och exteriören förenas. Denna design ger föraren full kontroll över bilens storlek vilket är perfekt i intensiv stadstrafik.
     link: https://www.lexus.se/car-models/ux/#hero
 
   - id: technology
-    title: Uppfinningsrik teknologi
-    description: Njut av 360-graders fågelperspektiv över bilen och din omgivning från fyra videokameror med Panoramic View Monitor. Med en inbyggd Qi-kompatibel trådlös laddare slipper du sladdar, vilket möjliggör enkel laddning av smartphones genom att helt enkelt placera dem på laddaren, så att du kan ägna dig åt att utforska staden.
+    title: Innovativ teknologi
+    description: Vår nya lilla SUV är fulladdad med innovativ teknik. För att underlätta för dig kan en 360- panoramavy ge en tydlig bild av bilen och dess omgivning via fyra kameror. I mittkonsolen hittar du även den trådlösa smartphone-laddaren som tack vare induktionsladdning laddar kompatibla smartphones utan att du behöver koppla in en sladd.
     link: https://www.lexus.se/car-models/ux/#hero
 
   - id: saftey
     title: Kör med självförtroende
-    description: Ett avancerat andra generationens Lexus Safety System+ ser till att du och dina passagerare är trygga, med funktioner som Dynamic Radar Cruise Control med vägskyltassistent, förkollisionssystem och Lane Tracing Assist. Genom att komplettera och förstärka din körförmåga förbättrar Lexus Safety System+ dina sinnen för att säkerställa att du alltid känner dig trygg under resan.
+    description: För att du ska få en mer avslappnad resa erbjuder UX 250h Lexus Safety System +. Ett avancerat säkerhetssystem som gör att du känner dig extra trygg och mer självsäker i trafiken. Här ingår allt från Aktiv farthållare, Automatiskt avbländande helljus, Aktivt krockskyddssystem med Fotgängarigenkänning och Filhållningsassistans till Vägskyltsigenkänning.
     link: https://www.lexus.se/car-models/ux/#hero
 
   - id: config
-    title: Konfigurator
-    description: Det finns en rad alternativ tillgängliga, inklusive dynamiska F&nbsp;SPORT, vilket innebär att du kan bygga en Lexus&nbsp;UX som är perfekt för dig. Besök hemsidan och börja konfigurera din drömbil idag.
+    title: Lexus bilkonfigurator
+    description: Det finns en rad alternativ tillgängliga, inklusive dynamiska F SPORT, vilket innebär att du kan bygga en Lexus&nbsp;UX som är perfekt för dig. Besök hemsidan och börja konfigurera din drömbil idag.
     link: https://carconfig.lexus.se/se/sv/?UX/473cb99c-1abe-4b59-89a7-c27af62775ae/configure
     open-in-tab: true
 ---
