--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Lexus UX
-intro: La tua prossima avventura urbana è al volante del nuovissimo Lexus UX, l'ibrido elettronico di quarta generazione che si fa notare per il suo design accattivante e un corpo vettura sofisticato. Scopri gli angoli più cool della città, passando dai grattacieli futuristici alle gallerie d'arte contemporanea, alla guida di un crossover dal carattere deciso. Prova i comfort di lusso e lo stile esclusivo di Lexus UX con un test drive.
+title: Lexus&nbsp;UX Hybrid
+intro: La tua prossima avventura urbana è al volante del nuovissimo Lexus&nbsp;UX Hybrid, l'ibrido elettronico di quarta generazione che si fa notare per il suo design accattivante e un corpo vettura sofisticato. Scopri gli angoli più cool della città, passando dai grattacieli futuristici alle gallerie d'arte contemporanea, alla guida di un crossover dal carattere deciso. Prova i comfort di lusso e lo stile esclusivo di Lexus&nbsp;UX Hybrid con un test drive.
 
 intro-links:
 
@@ -16,13 +16,13 @@ intro-links:
     main-cta: true
     id: test-drive
 
-  - title: Configura il tuo UX Hybrid
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+  - title: Configura il tuo Lexus&nbsp;UX Hybrid
+    link: https://carconfig.lexus.it/it/it/?UX/f50e1eca-b7a3-407d-9d83-b14cee9c62bf/grades
     open-in-tab: true
     id: configure
 
   - title: Scopri di più
-    link: https://www.lexus.co.uk/car-models/ux/#hero
+    link: https://www.lexus.it/car-models/ux/#hero
     id: find-out-more
 
 feature-cta: Scopri di più
@@ -31,37 +31,37 @@ features:
 
   - id: self-charge
     title: Zero compromessi
-    description: Lexus UX è la nuova frontiera dell'ibrido che si autoricarica autonomamente durante la guida, senza richiedere noiose soste durante il viaggio. Grazie alla tecnologia di quarta generazione, UX Hybrid è dotato dell'avanzato sistema Lexus Self-Charging Hybrid  con una motorizzazione 2.0L, che abbina efficienza nei consumi e prestazioni fluide.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    description: Lexus&nbsp;UX Hybrid è la nuova frontiera dell'ibrido che si autoricarica autonomamente durante la guida, senza richiedere noiose soste durante il viaggio. Grazie alla tecnologia di quarta generazione, Lexus&nbsp;UX Hybrid è dotato dell'avanzato sistema Lexus Full Hybrid Electric con una motorizzazione 2.0L, che abbina efficienza nei consumi e prestazioni fluide.
+    link: https://www.lexus.it/car-models/ux/#hero
 
   - id: performance
     title: Prestazioni elevate
-    description: Il baricentro ribassato e il telaio ad alta rigidità permettono a UX Hybrid di offrire una dinamica di guida precisa. Il tutto è ulteriormente migliorato da stabilizzatori aerodinamici straordinari, ingegnosamente incorporati nel design dei passaruota e delle luci posteriori, che offrono estrema tenuta in velocità. Il nuovo Lexus UX giustappone le prestazioni della E-FOUR a quattro ruote motrici con un'efficienza di ultima generazione, raggiungendo fino a 68,9 mpg, ideale per risparmiare carburante durante un weekend fuoriporta.
-    link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
+    description: Il baricentro ribassato e il telaio ad alta rigidità permettono a Lexus&nbsp;UX Hybrid di offrire una dinamica di guida precisa. Il tutto è ulteriormente migliorato da stabilizzatori aerodinamici straordinari, ingegnosamente incorporati nel design dei passaruota e delle luci posteriori, che offrono estrema tenuta in velocità. Il nuovo Lexus&nbsp;UX Hybrid giustappone le prestazioni della E-FOUR a quattro ruote motrici con un'efficienza di ultima generazione, raggiungendo fino a 68,9 mpg, ideale per risparmiare carburante durante un weekend fuoriporta.
+    link: https://www.lexus.it/car-models/ux/#hero
 
   - id: design
     title: Design intelligente
-    description: Il nuovo UX Hybrid grazie al suo design audace, esprime una forza inconfondibile. La sua distintiva mascherina, la silhouette sportiva e le superfici elegantemente scolpite nella parte posteriore, faranno girare la testa in città. Una nuovissima generazione di crossover, costruita  per esplorare nuovi orizzonti durante la tua fuga urbana. Lexus UX è un'aggiunta elegante e sofisticata alla tua avventura.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: Il nuovo Lexus&nbsp;UX Hybrid grazie al suo design audace, esprime una forza inconfondibile. La sua distintiva mascherina, la silhouette sportiva e le superfici elegantemente scolpite nella parte posteriore, faranno girare la testa in città. Una nuovissima generazione di crossover, costruita  per esplorare nuovi orizzonti durante la tua fuga urbana. Lexus&nbsp;UX Hybrid è un'aggiunta elegante e sofisticata alla tua avventura.
+    link: https://www.lexus.it/car-models/ux/#hero
 
   - id: city
     title: Perfetto per la città
-    description: Lexus UX vanta il più ampio campo visivo della sua categoria, ispirato al principio architettonico giapponese Engawa, in cui l'interno e l'esterno sono perfettamente collegati, consentendo una coesistenza più armoniosa con l'ambiente circostante. Questo design intelligente ti consente di percepire le dimensioni del veicolo, quindi è più facile da manovrare in città.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    description: Lexus&nbsp;UX Hybrid vanta il più ampio campo visivo della sua categoria, ispirato al principio architettonico giapponese Engawa, in cui l'interno e l'esterno sono perfettamente collegati, consentendo una coesistenza più armoniosa con l'ambiente circostante. Questo design intelligente ti consente di percepire le dimensioni del veicolo, quindi è più facile da manovrare in città.
+    link: https://www.lexus.it/car-models/ux/#hero
 
   - id: technology
     title: Tecnologia innovativa
     description: Goditi un'eccezionale vista a 360° della vettura e di ciò che la circonda, grazie alle quattro videocamere e allo schermo da 10,3 pollici del Panoramic View Monitor. Il caricatore wireless compatibile Qi, permette di caricare un dispositivo come lo smartphone semplicemente appoggiandolo sul supporto dedicato. Dovrai solo lasciarti guidare!
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.it/car-models/ux/#hero
 
   - id: saftey
     title: Sicurezza migliorata
-    description: Grazie al nuovo sistema di sicurezza Lexus Safety Sistem +, UX Hybrid può beneficiare di un pacchetto di dispositivi straordinariamente completo, incluso il sistema di pre-collisione con rilevamento pedoni; l’allarme di allontanamento dalla corsia di marcia con assistenza al rilevamento di corsia, fari abbaglianti automatici, radar di controllo della velocità di crociera dinamico e riconoscimento dei segnali stradali. Per rendere il tuo viaggio in auto sempre più sicuro.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    description: Grazie al nuovo sistema di sicurezza Lexus Safety Sistem +, Lexus&nbsp;UX Hybrid può beneficiare di un pacchetto di dispositivi straordinariamente completo, incluso il sistema di pre-collisione con rilevamento pedoni; l’allarme di allontanamento dalla corsia di marcia con assistenza al rilevamento di corsia, fari abbaglianti automatici, radar di controllo della velocità di crociera dinamico e riconoscimento dei segnali stradali. Per rendere il tuo viaggio in auto sempre più sicuro.
+    link: https://www.lexus.it/car-models/ux/#hero
 
   - id: config
     title: Configurazione personalizzata
-    description: Grazie a un'ampia gamma di opzioni disponibili, tra cui l'esclusiva versione F&nbsp;SPORT, potrai personalizzare Lexus UX a seconda delle tue esigenze. Visita il sito internet ufficiale e configura sin da ora il crossover ibrido dei tuoi sogni.
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    description: Grazie a un'ampia gamma di opzioni disponibili, tra cui l'esclusiva versione F&nbsp;SPORT, potrai personalizzare Lexus&nbsp;UX Hybrid a seconda delle tue esigenze. Visita il sito internet ufficiale e configura sin da ora il crossover ibrido dei tuoi sogni.
+    link: https://carconfig.lexus.it/it/it/?UX/f50e1eca-b7a3-407d-9d83-b14cee9c62bf/grades
     open-in-tab: true
 ---
