--- a/_pages/cityguider/stockholm/index.html
+++ b/_pages/cityguider/stockholm/index.html
@@ -39,7 +39,7 @@ features:
     place: Fotografiskas Restaurang
     title: Hållbar och fotogenisk mat med vackra vyer som lunchsällskap
     description: >
-      När du känner dig färdig med museet är det dags för nästa stopp, men den här gången för att äta lunch. Ta färjan från Skeppsholmen till Slussen och promenera längs vattnet till tegelbyggnaden där Fotografiska håller till. Här inne hittar du, förutom fotokonst i världsklass även en av Stockholms trendigaste restauranger. På menyn, som tagits fram av stjärnkocken Paul Svensson, står säsongsbaserade rätter med fokus på vegetariskt och hållbarhet.
+      När du känner dig färdig med museet är det dags för nästa, men den här gången för att äta lunch. Ta färjan från Skeppsholmen till Slussen och promenera längs vattnet till tegelbyggnaden där Fotografiska håller till. Här inne hittar du, förutom fotokonst i världsklass även en av Stockholms trendigaste restauranger. På menyn, som tagits fram av stjärnkocken Paul Svensson, står säsongsbaserade rätter med fokus på vegetariskt och hållbarhet.
 
   - id: secondhand-pa-hornsgatan
     time: "14:31"
