--- a/_pages/guias-de-ciudades/index.html
+++ b/_pages/guias-de-ciudades/index.html
@@ -4,6 +4,7 @@ id: city-guides
 group: true
 nav: true
 nav-order: 2
+nav-title: Nuestras guías
 
 title: Guías de ciudades
 intro: Emprende una aventura urbana de 24 horas con nuestras guías de diseño. Desde el vanguardismo y el alma artística de Barcelona hasta el pasado industrial y el latido innovador de Bilbao. Descubre estas guías pensadas para los amantes del diseño.
