--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -40,7 +40,7 @@ feature-cta: Mehr entdecken
 features:
 
   - id: self-charge
-    title: Hybriderlebnis auf einem neuen Level
+    title: Hybrid-Erlebnis auf neuem Level
     description: >
       Der neue Lexus&nbsp;UX Hybrid lädt sich während der Fahrt selbsttätig auf. Ohne Stopp an externen Ladestationen bringt er sie mühelos von Sonnenaufgang zu Sonnenaufgang durch die Stadt. Die 4. Generation des Lexus Hybridantriebs kombiniert einen hocheffizienten Elektromotor mit einem kraftvollen 2,0 l-Benzinmotor zu einem Fahrerlebnis voller Dynamik und Laufruhe. Angetrieben von sportlichen 184 PS.
     link: https://www.lexus.de/car-models/ux/#keyfeatures
