--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -31,11 +31,9 @@ intro-links:
     open-in-tab: true
     id: configure
 
-  - title: Mehr entdecken
-    link: https://www.lexus.de/car-models/ux/#hero
+  - title: Zum UX Angebot
+    link: https://www.lexus.de/car-models/ux/offers
     id: find-out-more
-
-feature-cta: Mehr entdecken
 
 features:
 
@@ -44,41 +42,48 @@ features:
     description: >
       Der neue Lexus&nbsp;UX Hybrid lädt sich während der Fahrt selbsttätig auf. Ohne Stopp an externen Ladestationen bringt er sie mühelos von Sonnenaufgang zu Sonnenaufgang durch die Stadt. Die 4. Generation des Lexus Hybridantriebs kombiniert einen hocheffizienten Elektromotor mit einem kraftvollen 2,0 l-Benzinmotor zu einem Fahrerlebnis voller Dynamik und Laufruhe. Angetrieben von sportlichen 184 PS.
     link: https://www.lexus.de/car-models/ux/#keyfeatures
+    cta-label: Mehr entdecken
 
   - id: performance
     title: Sportlich, agil, urban
     description: >
       Souverän wie ein SUV, agil wie ein Coupé, ideal für den Stadtverkehr. Der neue Lexus&nbsp;UX Hybrid verfügt über die innovative GA-C Plattform, die eine verwindungssteife Karosserie mit einem extrem niedrigen Fahrzeugschwerpunkt vereint. Das Ergebnis: Extrem agiles Fahrverhalten und hohe Fahrstabilität, sportliches Handling und der kleinste Wendekreis seiner Klasse.
     link: https://d3rvezpmgp265q.cloudfront.net/lexusone/lexdedev11/UX-Broschuere-Preisliste-11-02-2019_tcm-3150-1574663.pdf
+    cta-label: UX Broschüre herunterladen
 
   - id: design
     title: Intelligentes Design
     description: >
       Der Lexus&nbsp;UX zieht alle Blicke auf sich. Markante Linien, der unverwechselbare Diabolo-Kühlergrill an der athletischen Front, die sportliche Breitenbetonung und der niedrige Schwerpunkt schaffen einen Anblick, der Athletik und Eleganz vereint. Aerodynamische Innovationen an Radhäusern und Heckleuchten minimieren zudem den Fahrzeugauftrieb und erhöhen die Fahrstabilität bei hohen Geschwindigkeiten und Seitenwind.
     link: https://www.lexus.de/car-models/ux/#sunrise-to-sunrise
+    cta-label: Mehr entdecken
 
   - id: city
     title: Perfekt für die Stadt
     description: >
       Der neue Lexus&nbsp;UX Hybrid verfügt über das breiteste Sichtfeld seiner Klasse, inspiriert vom japanischen Engawa-Design, das Innen- und Außendesign scheinbar nahtlos ineinander übergehen lässt. Dadurch kann der Fahrer die Abmessungen des Fahrzeugs intuitiv erfassen, was die  Manövrierbarkeit des UX in der Stadt optimiert.
     link: https://www.lexus.de/car-models/ux/#experience
+    cta-label: Mehr entdecken
 
   - id: technology
     title: Innovativer Komfort
     description: >
       Das mit 10,3 Zoll größte Display seiner Klasse bietet Ihnen hochauflösende Bilder der vier am Fahrzeug platzierten Kameras. Das Ergebnis ist eine perfekte 360° Rundum-Sicht auf die Fahrzeugumgebung für komfortables Manövrieren und Einparken. Die induktive Ladestation ermöglicht unterwegs das kabellose Laden eines kompatiblen Smartphones – durch einfaches Auflegen des Geräts in die Ladeschale.
     link: https://www.youtube.com/watch?v=Bo7aFUGSRgQ
+    cta-label: Mehr entdecken
 
   - id: saftey
     title: Denkt mit, schaut voraus
     description: >
       Mit der neuen Generation des Lexus Safety System+ bietet der UX ein leistungsstarkes Paket an innovativen Fahrerassistenzsystemen wie Pre Crash Safety-System mit Fußgängererkennung, Spurhalteassistent mit Spurverlassenswarner, Fernlichtassistent mit automatischem Abblendlicht, eine Adaptive Geschwindigkeitsregelung sowie eine automatische Verkehrszeichenerkennung.
     link: https://www.youtube.com/watch?v=Bo7aFUGSRgQ
+    cta-label: Mehr entdecken
 
   - id: config
     title: Jetzt konfigurieren
     description: >
       Gestalten Sie den Lexus&nbsp;UX Hybrid, der zu Ihren individuellen Vorstellungen passt – wählen Sie aus attraktiven Ausstattungslinien und einer Fülle an innovativen, komfortablen Features.
     link: https://carconfig.lexus.de/de/de/?UX/90b4d8da-44cf-468a-99c4-aaf1a807c66e/grades
+    cta-label: UX Konfigurieren
     open-in-tab: true
 ---
