extra lexus copy

--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -41,6 +41,8 @@ features:
     title: Hybrid-Erlebnis auf neuem Level
     description: >
       Der neue Lexus&nbsp;UX Hybrid lädt sich während der Fahrt selbsttätig auf. Ohne Stopp an externen Ladestationen bringt er sie mühelos von Sonnenaufgang zu Sonnenaufgang durch die Stadt. Die 4. Generation des Lexus Hybridantriebs kombiniert einen hocheffizienten Elektromotor mit einem kraftvollen 2,0 l-Benzinmotor zu einem Fahrerlebnis voller Dynamik und Laufruhe. Angetrieben von sportlichen 184 PS.
+    extra: >
+      Kraftstoffverbrauch kombiniert 4,3 – 4,1 l/100 km (E-FOUR: 4,5 – 4,4 l/100 km), CO2-Emissionen kombiniert 97 – 94 g/km (E-FOUR: 103 – 101 g/km).
     link: https://www.lexus.de/car-models/ux/#keyfeatures
     cta-label: Mehr entdecken
 
