design hotels nav title

--- a/_pages/hotel-di-design/index.html
+++ b/_pages/hotel-di-design/index.html
@@ -3,6 +3,7 @@ layout: design-hotels
 id: design-hotels
 nav: true
 nav-order: 3
+nav-title: Design Collection
 
 title: Hotel di design
 intro: "Abbiamo esplorato il mondo in lungo e in largo per scovare hotel all'avanguardia, dove l'architettura, l'interior design e la qualità del servizio vanno di pari passo con il piacere di un'esperienza fuori dal comune. Cinque stelle e oltre: questi cofanetti di lusso sono la destinazione perfetta per viaggi ai confini del mondo, tra panorami mozzafiato e avventure indimenticabili. Provare per credere!"
