--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -17,7 +17,7 @@ intro-links:
     id: test-drive
 
   - title: Build your own Lexus&nbsp;UX
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    link: https://carconfig.lexus.co.uk/gb/en/?UX/acdff14d-9878-4b9f-9583-d44c062028e0/configure
     open-in-tab: true
     id: configure
 
@@ -32,36 +32,36 @@ features:
   - id: self-charge
     title: No Plugs. No Diesel. No Compromise.
     description: The Lexus&nbsp;UX charges itself as you drive, there’s no plugging in, which means no interruptions to your weekend away. Journeys are powered by a fourth generation Lexus Self-Charging Hybrid with automatic transmission that features a 2.0 litre, four-cylinder petrol engine, powerful electric motor and newly developed hybrid transmission.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: performance
     title: Exhilarating Performance
     description: A commanding seating position with excellent visibility, coupled with a low centre of gravity and rigid platform, provide a driving experience that you simply wouldn’t expect from a modern crossover – agile, powerful and responsive. The all-new Lexus&nbsp;UX juxtaposes exhilaratingly smooth E-FOUR All-Wheel Drive performance with next generation efficiency, achieving up to 68.9 mpg, ideal for saving on fuel during a weekend away.
-    link: https://www.lexus.co.uk/car-models/ux/#keyfeatures
+    link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: design
     title: Intelligent Design
     description: The Lexus&nbsp;UX is dramatic and full of personality; with its distinctive signature grille, sporty silhouette and bold rear design, you’ll turn heads in the city. A brand-new breed of crossover built for modern urban escapes to explore new horizons, the Lexus&nbsp;UX is a stylish, sophisticated addition to your adventure.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: city
     title: Perfect for the City
     description: The Lexus&nbsp;UX boasts the widest field of vision in its class, inspired by the Japanese architectural principle of ‘Engawa’, where the interior and exterior are seamlessly connected, allowing for a more harmonious coexistence with the environment. This clever design enables you to sense the size of the vehicle, so it’s easy to manoeuvre in the city.
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: technology
     title: Imaginative Technology
     description: Enjoy 360° birds-eye views of the car and your surroundings from four video cameras using the Panoramic View Monitor. There’s no need to navigate wires, with a built in Qi-compatible wireless charger, allowing easy charging of smartphones by simply placing it on the charger, ensuring you’re topped up and ready to explore!
-    link: https://www.lexus.co.uk/car-models/ux/new-horizon/
+    link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: saftey
     title: Progress with Confidence
     description: An advanced second generation Lexus Safety System+ keeps you and your passengers safe, with features including Dynamic Radar Cruise Control with Road Sign Assist, Pre-Collision System and Lane Tracing Assist. By complementing and reinforcing your driving abilities, Lexus Safety System + enhances your senses to ensure that you always feel confident on the journey ahead.
-    link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
+    link: https://www.lexus.co.uk/car-models/ux/#hero
 
   - id: config
     title: Configurator
     description: With a range of options and grades available, including the dynamic F&nbsp;SPORT, you can build a Lexus&nbsp;UX that’s perfect for you. Visit the website to start configuring your dream Lexus&nbsp;UX today.
-    link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
+    link: https://carconfig.lexus.co.uk/gb/en/?UX/acdff14d-9878-4b9f-9583-d44c062028e0/configure
     open-in-tab: true
 ---
