--- a/_pages/competition/index.html
+++ b/_pages/competition/index.html
@@ -7,7 +7,7 @@ no-test-drive-promo: true
 
 title: Competition
 long-title: Win your very own design escape
-intro: Enter below to win a luxurious design break in the UK. Tell us about your perfect urban adventure and the type of style you go for – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel and urban escape to your look. You’ll have use of the new Lexus&nbsp;UX Self-Charging Hybrid to complete your design-forward getaway.
+intro: Enter below to win a luxurious design break in the UK. Tell us about your perfect urban adventure and the type of style you go for – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel and urban escape to your look. You’ll have use of the All New Lexus&nbsp;UX Self-Charging Hybrid to complete your design-forward getaway.
 enter-cta: Enter Now
 
 competition-form:
