--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -3,6 +3,7 @@ layout: design-hotels
 id: design-hotels
 nav: true
 nav-order: 3
+nav-title: The look-book
 
 title: Design Hotels
 intro: We’ve searched far and wide for the finest design hotels in the world. Where a concept-driven experience meets the finest architecture, interior and service, that is where you’re guaranteed something above indulgent five-star luxury. These hotels are as much about a perfect stay as they are about introducing you to something new, something beautiful, and something daring. Just see for yourself...
