--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: The all-new Lexus&nbsp;UX
-intro: Head for your next urban adventure with the all-new Lexus&nbsp;UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the Lexus&nbsp;UX with a 24hr test drive.
+title: All New Lexus&nbsp;UX
+intro: Head for your next urban adventure with the All New Lexus&nbsp;UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the All New Lexus&nbsp;UX with a 24hr test drive.
 
 intro-links:
 
