--- a/_pages/hotels/index.html
+++ b/_pages/hotels/index.html
@@ -5,5 +5,5 @@ nav: true
 nav-order: 5
 
 title: Hotels
-intro: Browse our favourite design hotels in the UK and beyond and have your very own stylish getaway. Book any UK break and be in with the chance of using the new Lexus&nbsp;UX Self-Charging Hybrid during your escape.
+intro: Browse our favourite design hotels in the UK and beyond and have your very own stylish getaway. Book any UK break and be in with the chance of using the All New Lexus&nbsp;UX Self-Charging Hybrid during your escape.
 ---
