--- a/_pages/tavling/index.html
+++ b/_pages/tavling/index.html
@@ -7,7 +7,7 @@ no-test-drive-promo: true
 
 title: Tävling
 long-title: Vinn ditt eget unika design&shy;äventyr
-intro: Klicka nedan för din chans att vinna en lyxig designresa i Sverige. Beskriv ditt perfekta storstadsäventyr och vilken stil som bäst stämmer in på dig. Är det stilren nordisk minimalism, klassisk elegans eller något mitt emellan? Oavsett vilket kommer du hitta hotellet som matchar dig och ditt urbana äventyr bäst. För att göra din design-getaway lite bekvämare kommer du få tillgång till en ny Lexus UX Self-Charging Hybrid att glida runt i
+intro: Klicka nedan för din chans att vinna en lyxig designresa i Sverige. Beskriv ditt perfekta storstadsäventyr och vilken stil som bäst stämmer in på dig. Är det stilren nordisk minimalism, klassisk elegans eller något mitt emellan? Oavsett vilket kommer du hitta hotellet som matchar dig och ditt urbana äventyr bäst. För att göra din design-getaway lite bekvämare kommer du få tillgång till en ny Lexus UX Self-Charging Hybrid att glida runt i.
 enter-cta: Sätt igång
 
 competition-form:
@@ -49,7 +49,7 @@ competition-form:
     statement:
       start: Din storstadsvistelse
       end: Fyll i dina uppgifter för din chans att vinna.
-    choose-again: prova igen?
+    choose-again: Prova igen?
     name: Namn
     email: E-mail
     qualify:
