--- a/_pages/offerte/index.html
+++ b/_pages/offerte/index.html
@@ -5,5 +5,5 @@ nav: true
 nav-order: 5
 
 title: Offerte
-intro: Scopri i migliori hotel di design in Italia o nel resto del mondo e regalati una vacanza dallo stile inimitabile. Prenotando un soggiorno in Italia potresti avere l'occasione di provare il nuovo Lexus&nbsp;UX Full Hybrid Electric durante la tua fuga di classe.
+intro: Scopri i migliori hotel di design in Italia o nel resto del mondo e regalati una vacanza dallo stile inimitabile.
 ---
