--- a/_pages/tavling/index.html
+++ b/_pages/tavling/index.html
@@ -8,6 +8,7 @@ no-test-drive-promo: true
 title: Tävling
 long-title: Vinn ditt eget unika design&shy;äventyr
 intro: Klicka nedan för din chans att vinna en lyxig designresa i Sverige. Beskriv ditt perfekta storstadsäventyr och vilken stil som bäst stämmer in på dig. Är det stilren nordisk minimalism, klassisk elegans eller något mitt emellan? Oavsett vilket kommer du hitta hotellet som matchar dig och ditt urbana äventyr bäst. Vinnaren kommer även få tillgång till en ny Lexus&nbsp;UX Self-Charging Hybrid att glida runt i.
+enter-cta: Sätt igång
 
 competition-form:
   post-url: https://getform.io/f/afbbe1ad-cd64-47cd-947c-6bce8695d4db
