--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: All New Lexus&nbsp;UX
+title: All New Lexus&nbsp;UX Self-Charging Hybrid
 intro: Head for your next urban adventure with the All New Lexus&nbsp;UX, a Self-Charging Hybrid that embodies innovative design and fine craftsmanship. Hop from city to city, discovering a world of design and craft in a car made for city escapes. Discover the style and luxury of the All New Lexus&nbsp;UX with a 24hr test drive.
 
 intro-links:
