--- a/_pages/konkurranse/index.html
+++ b/_pages/konkurranse/index.html
@@ -8,6 +8,7 @@ no-test-drive-promo: true
 title: Konkurranse
 long-title: Vinn ditt eget design&shy;eventyr
 intro: Bli med i konkurransen om et designopphold i Norge. Fortell oss om ditt perfekte, urbane eventyr og hva slags stil du går for – uansett om du liker det moderne og minimalistiske eller det elegante og storslåtte. For å gjøre din design-getaway litt ekstra bekvem får du selvfølgelig tilgang til den nye, selvladende hybriden Lexus&nbsp;UX.
+enter-cta: Bli med nå
 
 competition-form:
   post-url: https://getform.io/f/477ad645-e4df-49f3-a927-496c585d2c93
