--- a/_pages/terms-and-conditions/index.html
+++ b/_pages/terms-and-conditions/index.html
@@ -8,23 +8,58 @@ title: Terms & Conditions
 
 <h1 class="title title--xl">{{page.title}}</h1>
 <div class="space--xl"></div>
-<h2 class="title title--md">section</h2>
+
+<h2 class="title title--md">Entry rules</h2>
 <ol>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
+  <li>Entry is open to all Secret Escapes members who are booking a UK weekend break (excluding Northern Ireland, Channel Islands, Isle of Man, Isle of Wight and the Scottish Highlands) travelling between the 17th May and the 7th July 2019. On the following dates: 17th -19th May, 24th - 26th May, 31st May - 2nd June, 7th - 8th June, 14th - 16th June, 21st - 23rd June, 28th - 30th June and 5th - 7th July.</li>
+  <li>There is no entry fee and to be entered in the draw you must select the Opt in (enter) button to be entered into the competition.</li>
+  <li>Employees of Secret Escapes, Toyota (G.B) PLC and their affiliated companies as well as Toyota and Lexus dealers, printers, agencies or anyone else professionally connected with this draw, including their families, are not eligible to take part in the draw.</li>
+  <li>Prizes are non-transferable. No cash alternative to the prizes will be offered. The prize will be awarded to the winner only and is not transferable to third parties.</li>
 </ol>
+
 <div class="space--lg"></div>
-<h2 class="title title--md">section</h2>
+<h2 class="title title--md">Winning Process</h2>
 <ol>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
+  <li>There will be two (2) winners selected at random per wave of activity. Each winner will receive a Lexus UX for the duration of their UK weekend break.</li>
+  <li>The Winner will be notified by e-mail and phone call. This will be done seven (7) working days prior to their trip. The Winner is required to follow instructions on the notification e-mail in order to claim their prize.</li>
+  <li>The Winner is required to claim their prize within 24 hours of being notified or they will be deemed to have forfeited the prize.</li>
 </ol>
+
 <div class="space--lg"></div>
-<h2 class="title title--md">section</h2>
+<h2 class="title title--md">Driver</h2>
 <ol>
-  <li>item</li>
-  <li>item</li>
-  <li>item</li>
+  <li>The participant confirms that he or she is the holder of a current UK driving licence permitting him or her to drive motor cars on United Kingdom highways and that he or she is over the age of 25 years of age and not older than 75 years of age.</li>
+  <li>Drivers must have held a valid full licence for a minimum of 2 years. Drivers with 9 points or more on their licence or having had a major driving offence within the past 2 years will not be able to participate in this this prize draw. The Driver agrees to abide by UK Road Traffic Law at all times.</li>
+  <li>The driver hereby declares that he or she is in good health, their eyesight is of the standard required for the UK road driving test and that they are not suffering any illness or disability which may make it unsafe for them to drive.</li>
+  <li>The driver accepts that he or she shall be solely responsible for any decision as to their fitness to drive and that if at any point they are not fit to do so, then they shall cease driving immediately. The driver confirms that at no time when he or she is in charge of the loan car, they are not over the current UK legal limit for driving whilst under the influence of alcohol or drugs that may affect their ability to drive.</li>
+  <li>The driver confirms that should he or she have any cause for concern as to the roadworthiness or safety of any vehicle, they will bring the matter immediately to the attention of a Toyota (G.B) PLC representative.</li>
+</ol>
+
+<div class="space--lg"></div>
+<h2 class="title title--md">Licence check</h2>
+<ol>
+  <li>Prize can only be fulfilled once the driver supplies a copy of the front and back of their driving licence.</li>
+  <li>A maximum of two drivers are permitted to drive the vehicle.</li>
+  <li>All driving licences must be valid for insurance purposes and up to date (i.e. correct address, points removed where they are no longer valid) and must be full not provisional.</li>
+</ol>
+
+<div class="space--lg"></div>
+<h2 class="title title--md">Vehicle</h2>
+<ol>
+  <li>The loan of the Lexus UX is subject to certain loan car terms by Toyota (G.B) PLC. The winner must agree to these terms before taking possession of the vehicle.</li>
+  <li>The vehicles available for the winners of this prize draw is a Lexus UX. Toyota (G.B) PLC reserves the right to provide an alternative vehicle if for any reason Lexus UX is not available and to terminate forthwith any drivers’ involvement in the lexus car loan at any time and for any reason.</li>
+  <li>Maximum duration that vehicle can be made available is Friday – Monday. The car must not be taken out of the UK.</li>
+  <li>The vehicle may only be driven by the winner and one further nominated driver, only for private use and not for business purposes or any form of racing.</li>
+  <li>Upon collection of the vehicle it will be subject to a thorough inspection. The winner will be responsible for any damage arising from his failure to take reasonable care.</li>
+  <li>The winner is responsible for any fines, congestion or other charges arising from use of the car and for any damage arising from failure to take reasonable care; the car is insured subject to an insurance excess of £500 for each and every claim under £5,000; £1,000 for each and every claim in excess of £5,000. Please note these excesses are in addition to any amount payable as a result of misfuelling and/or engine damage due to navigating through flooded areas. For clarity in such instances an additional excess to the value of 10% of the repair costs will be charged.Insurance does not cover personal belongings.</li>
+  <li>Smoking is not allowed within the vehicle.</li>
+  <li>The car will be provided with a full tank of fuel. However, the car does not need to be returned with a full tank of fuel.</li>
+</ol>
+
+<div class="space--lg"></div>
+<h2 class="title title--md">Miscellaneous</h2>
+<ol>
+  <li>By entering this competition, entrants are agreeing to accept and be bound by these terms and conditions. The driver also acknowledges safe receipt of this document and confirms that he or she has read and has understood its contents.</li>
+  <li>The winners’ names may be used for promotional purposes and may be required to take part in publicity (including photographs) at no extra charge.</li>
+  <li>The competition promoter is Secret Escapes, 120 Holborn, London, EC1N 2TD in Partnership with Toyota (G.B) PLC, Burgh Heath, Epsom, Surrey, KT18 5UX</li>
 </ol>
