extra description for opt-in field

--- a/_pages/competition/index.html
+++ b/_pages/competition/index.html
@@ -60,6 +60,7 @@ competition-form:
       question: Would you like to stay updated on the latest Lexus news, offers and receive exclusive invitations?
       'yes': 'Yes'
       'no': 'No'
+      post-description: We will send these communications by email, phone, SMS or post. Be assured that Lexus UK will only share your personal information with companies that are an integral part of fulfilling the services we deliver. If you would like to find out more about how we process your data please visit our <a class="link--underlined" href="https://www.lexus.co.uk/customer-data/privacy-policy/">privacy policy</a> for details. Please note you can withdraw your consent at any time by clicking on the following link and completing the <a class="link--underlined" href="https://forms.lexus.co.uk/webforms/unsubscribe.aspx">unsubscribe form</a>.
     submit: Submit Entry
     terms: >
       By submitting your entry, you agree to the <a href="#" class="js-open-modal link--underlined" data-open-modal="competition-terms">terms and conditions</a> of this competition
